--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,11 +1,22 @@
 use_frameworks!
 
 target 'KLineView_Example' do
+    
   pod 'KLineView', :path => '../'
 
+  pod 'Alamofire'           #网络请求库
+  pod 'Moya'                #网络层封装
+  pod 'RxSwift'             #响应式
+  pod 'RxCocoa'             #Cocoa响应式扩展
+  #  pod 'Charts'              #图表库
+  
+  #改动CandleStickChartRenderer,增加最高低价显示，以收盘价为中心原点
+  pod 'Charts', git:"https://github.com/iCoobin/Charts.git", tag:"3.2.3-myself"
+  pod 'SnapKit'             #布局
+  pod 'ObjectMapper'        #模型
+  pod 'DGActivityIndicatorView' #Loading
+  
   target 'KLineView_Tests' do
     inherit! :search_paths
-
-    
   end
 end
